Fix google checkstyle